foundations/flex/07-flex-layout-2/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.header {
  height: 72px;
  background: darkmagenta;
  color: white;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding-left: 16px;
  font-weight: 900;
  font-size: 32px;
}

.main {
  display: flex;
  flex: 1 1 auto;
}

.right {
  display: flex;
}

.left {
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
  flex-direction: row;
  align-content: space-around;
  padding: 48px;
}

.footer {
  height: 72px;
  background: #eee;
  color: darkmagenta;
  display: flex;
  justify-content: center;
  align-items: center;
}

.header, .footer {
  flex: 0 0 auto;
}

.sidebar {
  width: 300px;
  background: royalblue;
  box-sizing: border-box;
  padding: 16px;
}

.card {
  border: 1px solid #eee;
  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
  border-radius: 4px;
  flex: 1 0 200px;    
  aspect-ratio: 1 / 1;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

a {
  font-size: 24px;
  color: white;
  text-decoration: none;
}

